--- a/index.html
+++ b/index.html
@@ -6,8 +6,19 @@
     <link href="https://fonts.googleapis.com/css?family=Inconsolata:400,700"
           rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/main.js"></script>
 </head>
 <body>
-
+<div class="flex-container">
+    <div class="flex-container">
+        <button class="button" id="green-button"></button>
+        <button class="button" id="red-button"></button>
+    </div>
+    <div class="flex-container">
+        <button class="button" id="yellow-button"></button>
+        <button class="button" id="blue-button"></button>
+    </div>
+</div>
 </body>
 </html>
