game buttons renamed

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 <body>
 <div class="flex-container">
     <div class="flex-container">
-        <button class="button" id="green-button"></button>
-        <button class="button" id="red-button"></button>
+        <button class="game-field" id="green-button"></button>
+        <button class="game-field" id="red-button"></button>
     </div>
     <div class="flex-container">
-        <button class="button" id="yellow-button"></button>
-        <button class="button" id="blue-button"></button>
+        <button class="game-field" id="yellow-button"></button>
+        <button class="game-field" id="blue-button"></button>
     </div>
 </div>
 </body>
