--- a/index.html
+++ b/index.html
@@ -12,12 +12,19 @@
 <body>
 <div class="flex-container">
     <div class="flex-container">
-        <button class="game-field" id="green-button"></button>
-        <button class="game-field" id="red-button"></button>
+        <button id="start"></button>
+        <button id="strict"></button>
+        <!--ToDo: add on/off switch-->
     </div>
     <div class="flex-container">
-        <button class="game-field" id="yellow-button"></button>
-        <button class="game-field" id="blue-button"></button>
+        <div class="flex-container">
+            <button class="game-field" id="green-button"></button>
+            <button class="game-field" id="red-button"></button>
+        </div>
+        <div class="flex-container">
+            <button class="game-field" id="yellow-button"></button>
+            <button class="game-field" id="blue-button"></button>
+        </div>
     </div>
 </div>
 </body>
