on and off buttons added

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
 <body>
 <div class="flex-container">
     <div class="flex-container">
-        <button id="start"></button>
-        <button id="strict"></button>
-        <!--ToDo: add on/off switch-->
+        <button id="start">Start</button>
+        <button id="strict">Strict</button>
+        <!--ToDo: replace with toggle switch-->
+        <button id="on">ON</button>
+        <button id="off">OFF</button>
     </div>
     <div class="flex-container">
         <div class="flex-container">
