--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <!--ToDo: replace with toggle switch-->
         <button id="on">ON</button>
         <button id="off">OFF</button>
+        <p id="round-counter"></p>
     </div>
     <div class="flex-container">
         <div class="flex-container">
