on/off buttons removed and stop button added

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
         <button id="start">Start</button>
         <button id="strict">Strict</button>
         <!--ToDo: replace with toggle switch-->
-        <button id="on">ON</button>
-        <button id="off">OFF</button>
+        <button id="stop">Stop</button>
         <p id="round-counter"></p>
     </div>
     <div class="flex-container">
