alignment for testing added

--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
     <script src="js/main.js"></script>
 </head>
 <body>
-<div class="flex-container">
+<div class="flex-container" id="app">
     <div class="flex-container">
         <button id="start">Start</button>
         <button id="strict">Strict</button>
         <!--ToDo: replace with toggle switch-->
         <button id="stop">Stop</button>
-        <p id="round-counter"></p>
+        <p id="round-counter">0</p>
     </div>
     <div class="flex-container">
-        <div class="flex-container">
+        <div class="flex-container game-field-row">
             <button class="game-field" id="green-button"></button>
             <button class="game-field" id="red-button"></button>
         </div>
-        <div class="flex-container">
+        <div class="flex-container game-field-row">
             <button class="game-field" id="yellow-button"></button>
             <button class="game-field" id="blue-button"></button>
         </div>
