--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
     <div class="flex-container">
         <div class="flex-container game-field-row">
             <button class="game-field" id="green-button" value="1"></button>
-            <button class="game-field" id="red-button" value="2"></button>
+            <button class="game-field" id="blue-button" value="2"></button>
         </div>
         <div class="flex-container game-field-row">
-            <button class="game-field" id="yellow-button" value="3"></button>
-            <button class="game-field" id="blue-button" value="4"></button>
+            <button class="game-field" id="violet-button" value="3"></button>
+            <button class="game-field" id="red-button" value="4"></button>
         </div>
     </div>
 </div>
