buttons are now represented as objects instead of values

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     </div>
     <div class="flex-container">
         <div class="flex-container game-field-row">
-            <button class="game-field" id="green-button" value="1"></button>
-            <button class="game-field" id="blue-button" value="2"></button>
+            <button class="game-field" id="green-button"></button>
+            <button class="game-field" id="blue-button"></button>
         </div>
         <div class="flex-container game-field-row">
-            <button class="game-field" id="violet-button" value="3"></button>
-            <button class="game-field" id="red-button" value="4"></button>
+            <button class="game-field" id="violet-button"></button>
+            <button class="game-field" id="red-button"></button>
         </div>
     </div>
 </div>
