disables the button if the user should not enter a field and after that enables them again

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
     </div>
     <div class="flex-container">
         <div class="flex-container game-field-row">
-            <button class="game-field" id="green-button"></button>
-            <button class="game-field" id="blue-button"></button>
+            <button class="game-field" id="green-button" disabled></button>
+            <button class="game-field" id="blue-button" disabled></button>
         </div>
         <div class="flex-container game-field-row">
-            <button class="game-field" id="violet-button"></button>
-            <button class="game-field" id="red-button"></button>
+            <button class="game-field" id="violet-button" disabled></button>
+            <button class="game-field" id="red-button" disabled></button>
         </div>
     </div>
 </div>
