checkbox to enable or disable the game

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         <button id="start">Start</button>
         <button id="strict">Strict</button>
         <!--ToDo: replace with toggle switch-->
+        <label class="switch">
+            <input type="checkbox" id="on-off">
+            <div class="slider"></div>
+        </label>
         <button id="stop">Stop</button>
         <p id="round-counter">0</p>
     </div>
