--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 <div class="flex-container" id="app">
     <div class="flex-container">
         <button id="start">Start</button>
-        <button id="strict">Strict</button>
-        <!--ToDo: replace with toggle switch-->
+        <label class="switch">
+            <input type="checkbox" id="strict">
+            <div class="slider"></div>
+        </label>
         <label class="switch">
             <input type="checkbox" id="on-off">
             <div class="slider"></div>
