switch title changed

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div class="flex-container" id="app">
     <div class="flex-container" id="controls">
         <div class="flex-container column switch-box" id="strict-box">
-            <p>Strict Mode</p>
+            <p class="switch-title">Strict Mode</p>
             <label class="switch">
                 <input type="checkbox" id="strict">
                 <div class="slider"></div>
@@ -24,7 +24,7 @@
             <button id="start">Start</button>
         </div>
         <div class="flex-container column switch-box" id="power-box">
-            <p>Power</p>
+            <p class="switch-title">Power</p>
             <label class="switch">
                 <input type="checkbox" id="on-off">
                 <div class="slider"></div>
@@ -40,6 +40,9 @@
             <button class="game-field" id="violet-button" disabled></button>
             <button class="game-field" id="red-button" disabled></button>
         </div>
+    </div>
+    <div class="flex-container">
+        <p>by Henry Joerg</p>
     </div>
 </div>
 </body>
