div's in the switches replaced with span's

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <p class="switch-title">Strict Mode</p>
             <label class="switch">
                 <input type="checkbox" id="strict">
-                <div class="slider"></div>
+                <span class="slider"></span>
             </label>
         </div>
         <div class="flex-container column" id="information-box">
@@ -27,7 +27,7 @@
             <p class="switch-title">Power</p>
             <label class="switch">
                 <input type="checkbox" id="on-off">
-                <div class="slider"></div>
+                <span class="slider"></span>
             </label>
         </div>
     </div>
