--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
 </head>
 <body>
 <div class="flex-container" id="app">
+    <div class="flex-container">
+        <h1><span class="green">s</span><span class="blue">i</span><span
+                class="violet">m</span><span class="red">o</span><span
+                class="orange">n </span><span class="green">g</span><span
+                class="blue">a</span><span
+                class="violet">m</span><span class="red">e</span></h1>
+    </div>
     <div class="flex-container" id="controls">
         <div class="flex-container column switch-box" id="strict-box">
             <p class="switch-title">Strict Mode</p>
